--- a/css/style.css
+++ b/css/style.css
@@ -174,3 +174,79 @@ button {
   font-weight: 700;
 }
 /* We are gamer Section Ends */
+/* Online Game Section Starts  */
+.online-game-text {
+  text-align: center;
+  margin-top: 100px;
+  margin-bottom: 50px;
+}
+.online-game-title {
+  color: #0b0223;
+  font-size: 35px;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+.online-game-heilight {
+  background: linear-gradient(180deg, #f948b2 0%, #8758f1 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.online-game-description {
+  color: #534c64;
+  font-size: 14px;
+  font-weight: 400;
+}
+.online-game-card-container {
+  display: flex;
+  gap: 20px;
+  margin-bottom: 100px;
+}
+/* .online-game-card img {
+  width: 100%;
+} */
+.card-img {
+  position: relative;
+}
+.card-img img {
+  width: 100%;
+}
+.content {
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  position: absolute;
+  background: rgba(0, 0, 0, 0.6);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  opacity: 0;
+  transition: 0.6s;
+}
+.hover-play {
+  font-size: 45px;
+  padding: 10px;
+  color: #ffff00;
+}
+.content h1 {
+  text-align: center;
+  font-size: 40px;
+  font-weight: 600;
+  background: var(--linear, linear-gradient(90deg, #ff42a5 0%, #ff42a5 100%));
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.content:hover {
+  opacity: 1;
+}
+.card-description {
+  color: #534c64;
+  font-size: 18px;
+  font-weight: 400;
+  margin-top: 10px;
+}
+/* Online Game Section Ends  */
