--- a/css/responsive.css
+++ b/css/responsive.css
@@ -15,7 +15,7 @@
     width: 100%;
     margin-top: 20px;
   }
-  .banner-description{
+  .banner-description {
     text-align: center;
   }
   .banner-img {
@@ -24,29 +24,48 @@
     display: block;
     text-align: center;
   }
-  .banner-img img{
+  .banner-img img {
     width: 100%;
   }
-
 
   .gamer-container {
     flex-direction: column;
   }
-  .gamer-text{
+  .gamer-text {
     width: 100%;
     text-align: center;
     padding: 0 30px;
   }
-  .gamer-img{
+  .gamer-img {
     width: 100%;
   }
-  .gamer-img img{
+  .gamer-img img {
     width: 100%;
   }
-  .online-game-card-container{
+  .online-game-card-container {
     flex-direction: column;
     padding: 0 20px;
-}
+  }
+  .instantly-container {
+    flex-direction: column-reverse;
+  }
+  .instantly-text {
+    width: 100%;
+    text-align: center;
+  }
+  .instantly-title {
+    margin-top: 2em;
+  }
+  .instantly-img {
+    width: 100%;
+  }
+  .instantly-img > img {
+    width: 100%;
+    height: 100%;
+    display: block;
+    margin: 0 auto;
+    padding: 30px;
+  }
 }
 /* Mobile Device Responsive */
 @media screen and (max-width: 425px) {
@@ -69,22 +88,42 @@
   .gamer-container {
     flex-direction: column;
   }
-  .gamer-text{
+  .gamer-text {
     width: 100%;
     text-align: center;
     padding: 0 10px;
   }
-  .gamer-title{
+  .gamer-title {
     font-size: 30px;
   }
-  .gamer-img{
+  .gamer-img {
     width: 100%;
   }
-  .gamer-img img{
+  .gamer-img img {
     width: 100%;
   }
-  .online-game-card-container{
+  .online-game-card-container {
     flex-direction: column;
     padding: 0 20px;
-}
+  }
+  .instantly-container {
+    flex-direction: column-reverse;
+  }
+  .instantly-text {
+    width: 100%;
+    text-align: center;
+  }
+  .instantly-title {
+    margin-top: 50px;
+  }
+  .instantly-img {
+    width: 100%;
+  }
+  .instantly-img > img {
+    width: 100%;
+    height: 100%;
+    display: block;
+    margin: 0 auto;
+    padding: 30px;
+  }
 }
