--- a/css/style.css
+++ b/css/style.css
@@ -250,3 +250,49 @@ button {
   margin-top: 10px;
 }
 /* Online Game Section Ends  */
+/* Play Instantly Section Starts */
+.instantly-container {
+  display: flex;
+  align-items: center;
+}
+.instantly-title {
+  font-size: 40px;
+  font-weight: 700;
+}
+.instantly-title span {
+  background: linear-gradient(180deg, #f948b2 0%, #8758f1 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.instantly-description {
+  color: #534c64;
+  margin-top: 10px;
+  font-size: 18px;
+  font-weight: 400;
+}
+.instantly-text {
+  width: 50%;
+  text-align: right;
+}
+.instantly-img {
+  position: relative;
+  width: 50%;
+}
+.instantly-img > img {
+  width: 50%;
+  height: 100%;
+  display: block;
+  margin: 0 auto;
+}
+.absolute img {
+  height: 150px;
+  width: 150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  bottom: -8%;
+  right: 63%;
+}
+/* Play Instantly Section Ends */
