--- a/css/style.css
+++ b/css/style.css
@@ -251,35 +251,42 @@ button {
 }
 /* Online Game Section Ends  */
 /* Play Instantly Section Starts */
-.instantly-container {
+.instantly-container,
+.play-game-container {
   display: flex;
   align-items: center;
 }
-.instantly-title {
+.instantly-title,
+.play-game-title {
   font-size: 40px;
   font-weight: 700;
 }
-.instantly-title span {
+.instantly-title span,
+.play-game-title span {
   background: linear-gradient(180deg, #f948b2 0%, #8758f1 100%);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-.instantly-description {
+.instantly-description,
+.play-game-description {
   color: #534c64;
   margin-top: 10px;
   font-size: 18px;
   font-weight: 400;
 }
-.instantly-text {
+.instantly-text,
+.play-game-text {
   width: 50%;
   text-align: right;
 }
-.instantly-img {
+.instantly-img,
+.play-game-img {
   position: relative;
   width: 50%;
 }
-.instantly-img > img {
+.instantly-img > img,
+.play-game-img > img {
   width: 50%;
   height: 100%;
   display: block;
@@ -296,3 +303,13 @@ button {
   right: 63%;
 }
 /* Play Instantly Section Ends */
+
+/*  Play Game Container Section Starts */
+.play-game-container{
+  margin-top: 4em;
+}
+
+.play-game-text {
+  text-align: left;
+}
+/*  Play Game Container Section Ends */
