--- a/css/style.css
+++ b/css/style.css
@@ -305,7 +305,7 @@ button {
 /* Play Instantly Section Ends */
 
 /*  Play Game Container Section Starts */
-.play-game-container{
+.play-game-container {
   margin-top: 4em;
 }
 
@@ -313,3 +313,59 @@ button {
   text-align: left;
 }
 /*  Play Game Container Section Ends */
+
+/* Careers Section Starts  */
+.careers-section {
+  margin-top: 4em;
+  background: linear-gradient(90deg, #ff42a5 0%, #ff42a5 100%);
+  padding: 80px;
+  border-radius: 10px;
+}
+.careers-container {
+  display: flex;
+  align-items: center;
+  gap: 3em;
+}
+.careers-text {
+  width: 50%;
+  color: #ffffff;
+}
+.careers-title {
+  font-size: 40px;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+.careers-description {
+  font-size: 18px;
+  font-weight: 400;
+  margin-bottom: 30px;
+}
+.careers-details-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 16px;
+  font-weight: 400;
+  margin-top: 10px;
+}
+.careers-details-left {
+  text-align: left;
+}
+.careers-details-right {
+  text-align: right;
+}
+.see-all {
+  background-color: #ffffff;
+  margin-top: 2em;
+  color: #ff42a5;
+}
+.careers-img {
+  width: 50%;
+}
+.careers-img img {
+  width: 100%;
+  height: 100%;
+  display: block;
+  margin: 0 auto;
+}
+/* Careers Section Ends  */
