--- a/css/style.css
+++ b/css/style.css
@@ -369,3 +369,33 @@ button {
   margin: 0 auto;
 }
 /* Careers Section Ends  */
+/* Game Name Section Starts */
+.game-name-container {
+  margin-top: 5em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 15px;
+}
+.game-name {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  border-radius: 50px;
+  box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.05);
+  padding: 10px 20px;
+}
+.game-name:hover {
+  border: 1px solid #ff42a5;
+  color: #ff42a5;
+}
+.game-name img {
+  width: 40px;
+}
+.game-name-title {
+  color: #0b0223;
+  font-size: 20px;
+  font-weight: 600;
+}
+/* Game Name Section Ends */
